Bug 542221 - DeCOMtaminate some usage of nsAccessibilityService. r=surkov